--- a/package.json
+++ b/package.json
@@ -9,14 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.6.0",
+    "@hookform/resolvers": "^3.3.4",
+    "@reduxjs/toolkit": "^2.1.0",
+    "@tanstack/react-query": "^5.18.1",
+    "axios": "^1.6.7",
     "expo": "~50.0.6",
     "expo-status-bar": "~1.11.1",
+    "moment": "^2.30.1",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-hook-form": "^7.50.1",
+    "react-native": "0.73.4",
+    "react-native-gesture-handler": "^2.15.0",
+    "react-native-reanimated": "^3.6.2",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^3.1.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
   },
   "private": true
