--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-alert-notification": "^0.4.0",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-reanimated": "^3.6.2",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-redux": "^9.1.0",
