--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "0.73.4",
     "react-native-alert-notification": "^0.4.0",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "^3.6.2",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.8.2",
