--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "zod": "^3.22.4",
-    "expo-image": "~1.10.6"
+    "expo-image": "~1.10.6",
+    "expo-linear-gradient": "~12.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
