--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^2.1.0",
+    "@shopify/flash-list": "1.6.3",
     "@tanstack/react-query": "^5.18.1",
     "axios": "^1.6.7",
     "expo": "~50.0.6",
