--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     "react-native-alert-notification": "^0.4.0",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^3.6.2",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-star-rating-widget": "^1.7.3",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
